# whisper-typer

./: .gitignore  README.md  WhisperTyper.bat  WhisperTyper.vbs  audio.py  config.py  hotkeys.py  install.py  pyproject.toml  requirements.txt  settings.py  setup.bat  transcriber.py  trends.py  typer.py  whisper_typer.py  widgets.py
.github/workflows/: build-installers.yml
compat/: __init__.py  base.py  linux.py  macos.py  windows.py
installer/: build.py  setup.iss
tests/: test_settings_and_mute.py
