[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-typer"
version = "1.0.0"
description = "Local voice typing widget for Windows — real-time speech-to-text with faster-whisper"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "torch>=2.0",
    "pynput>=1.7.6",
    "pystray>=0.19.4",
    "Pillow>=10.0",
]

[project.scripts]
whisper-typer = "whisper_typer:main"

[tool.setuptools]
py-modules = [
    "whisper_typer",
    "audio",
    "config",
    "hotkeys",
    "settings",
    "transcriber",
    "typer",
    "widgets",
]
